@@ -800,6 +800,7 @@ sub customer_details {
 sub post_invoice {
 
     my ( $self, $myconfig, $form ) = @_;
+    $form->{invnumber} = undef if $form->{invnumber} eq '';
 
     $form->all_business_units;
     $form->{invnumber} = $form->update_defaults( $myconfig, "sinumber", $dbh )
@@ -1484,7 +1485,8 @@ sub post_invoice {
                        approved = ?,
 		       crdate = ?,
                        reverse = ?,
-                       is_return = ?
+                       is_return = ?,
+                       setting_sequence = ?
 		 WHERE id = ?
              |;
     $sth = $dbh->prepare($query);
@@ -1502,7 +1504,7 @@ sub post_invoice {
         $form->{employee_id},   $form->{till},
         $form->{language_code}, $form->{ponumber}, $approved,
         $form->{crdate} || 'today', $form->{reverse},
-        $form->{is_return},
+        $form->{is_return},     $form->{setting_sequence},
         $form->{id}
     ) || $form->dberror($query);
 
@@ -1725,7 +1727,7 @@ sub retrieve_invoice {
 			          a.person_id, e.name AS employee, a.till, 
 			          a.reverse,
 			          a.language_code, a.ponumber, a.crdate,
-			          a.on_hold, a.description
+			          a.on_hold, a.description, a.setting_sequence
 			     FROM ar a
 			LEFT JOIN entity_employee em ON (em.entity_id = a.person_id)
 			LEFT JOIN entity e ON e.id = em.entity_id
