@@ -67,7 +67,10 @@ our @default_settings = (
         label => $locale->text('Separate Duties'),
          type => 'YES_NO', },
        { name => 'lock_description',
-        label => 'Lock Item Description',
+        label => $locale->text('Lock Item Description'),
+         type => 'YES_NO', },
+       { name => 'gapless_ar',
+        label => $locale->text('Gapless AR'), 
          type => 'YES_NO', },
      ] },
  { title => $locale->text('Default Accounts'),
