@@ -15,6 +15,7 @@ Changelog for 1.4.8
 * Fixed errors saving person as employee on contacts screen (Chris T)
 * Added min empty lines for orders, invoices, and gl (Chris T, 1277)
 * Fixed 1280, credit/debit invoices flipping signs (Chris T)
+* Fixed 1279, gaps possible if drafts are deleted (Chris T)
 
 Chris T is Chris Travers
 
